[package]
name = "pwm-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwm-lib = { path = "../pwm-lib" }
serde = { version = "1.0.198", features = ["derive"] }
bincode = "1.3.3" 

[dev-dependencies]
tokio-test = "0.4.4"