[package]
name = "pwm-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
keep-hash = []

[dependencies]
pwm-lib = { path = "../pwm-lib" }
serde = { version = "1.0.198", features = ["derive"] }
bincode = "1.3.3" 
csv = "1.3.0"
