[package]
name = "pwm-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwm-db = {path = "../pwm-db"}
pwm-lib = {path = "../pwm-lib"}
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
# gtk4 = "0.8.2"
