[package]
name = "pwm-gui"
version = "0.3.2"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
log = "0.4.21"
rfd = "0.14.1"
tokio = { version = "1.37.0", features = ["full"] }
json = "0.12.4"

[dependencies.pwm-lib]
path = "../pwm-lib"

[dependencies.pwm-db]
path = "../pwm-db"
features = []
