[package]
name = "pwm-lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["use-aes-gcm-siv"]
pepper = []
use-aes-gcm-siv = ["aes-gcm-siv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwm-proc = {path = "../pwm-proc"}
aead = "0.5.2"
aes-gcm = "0.10.3"
aes-gcm-siv = { version = "0.11.1", optional = true }
argon2 = "0.5.3"
pbkdf2 = "0.12.2"
scrypt = "0.11.0"
sha2 = "0.10.8"
zeroize = "1.7.0"
serde = { version = "1.0.198", features = ["derive"] }
passwords = "3.1.16"
